Archive2/81/432b0d40a8713d/output
main.cpp:1:2: error: stray '#' in program
 P#include <algorithm>
  ^
main.cpp:1:1: error: 'P' does not name a type
 P#include <algorithm>
 ^
In file included from main.cpp:2:0:
/usr/local/include/c++/4.9.0/initializer_list:39:37: error: expected declaration before end of line
 #pragma GCC visibility push(default)
                                     ^
